<resources>
    <string name="app_name">UpTune</string>
    <string name="catalog">Catalog</string>
    <string name="home">home</string>
    <string name="user">My file</string>
    <string name="weekly_charts">Weekly charts</string>
    <string name="up_tune_catalog">Up Tune Catalog</string>
    <string name="loading">Loading</string>
    <string name="welcome_back_name">Welcome to Up Tune</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logButton">Register</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_spacetab">Spacetab</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="warning_need_token">You need to request an access token first</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="com_spotify_sdk_redirect_scheme">spotify-sdk</string>
    <string name="com_spotify_sdk_redirect_host">auth</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_albums">Top Albums</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="bannerCatalog">Music is \na reflection of self,\nwe just explain it,\nand then we get \nour checks in the mail</string>
</resources>