<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo2"
        android:transitionName="logo_img"
        />

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_back_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:transitionName="loadTitle"/>

    <TextView

        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_in_to_continue"
        android:textSize="18sp"
        android:transitionName="loadText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:transitionName="loadUsername"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:transitionName="loadPw"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:textColor="#000"/>
        <Button
            android:transitionName="loadLogin"
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_200"
            android:text="@string/logButton"
            android:textColor="#fff"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/sing_up"
            android:transitionName="loadSing"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:textColor="#000"
            android:text="New User? SING UP"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/antic"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>